Fri Nov  5 00:29:08  2010  Steve Huston  <shuston@riverace.com>

        * ace/Process_Manager.h: Removed remaining references to reap().
          Noted that terminate() doesn't remove the process entry, and the
          caller is advised to also call wait() or remove().

Tue Nov  2 13:26:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ATM_Stream.inl:
        * ace/Atomic_Op.inl:
        * ace/Atomic_Op_GCC_T.inl:
          Layout changes

        * ace/OS_NS_dlfcn.inl:
          Removed old code

        * ace/config-macros.h:
          When using ACE_HAS_VALGRIND, disable the dlclose functionality,
          valgrind needs to have all loaded dll's still in memory in order
          to show the full callstack, if the dll is unloaded before process
          shutdown valgrind will show ???

        * ace/os_include/os_dlfcn.h:
          Removed old defines

        * debian/TODO:
        * debian/debian.rules:
          Cleanup

        * debian/cmp-installation.sh:
          Removed this file.

Tue Nov  2 01:25:05 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Log_Msg.cpp (ACE_Log_Msg::log): Added

          ACE_OS::memset(format,'\0',128);

          to ensure the format string has known values.  Thanks to Chad
          Beaulac <chad dot beaulac at objectivesolutions dot com> for
          this suggestion.  This fixes bugid 3923.

Tue Nov  2 00:18:34 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): For platforms that have the GNU-extended
          gethostbyname2_r() function, use it instead of getaddrinfo() for
          a IPv6 hostname lookup. Customer reports that it getaddrinfo() is
          hugely slower than gethostbyname2 on large vlans. The alternate
          code is used if ACE_HAS_GETHOSTBYNAME2 is set in config.h.

        * configure.ac: Check for ACE_HAS_GETHOSTBYNAME2.

Mon Nov  1 15:03:05 UTC 2010  Steve Huston  <shuston@riverace.com>
